--- a/website/top/ytu/chem/index.htm
+++ b/website/top/ytu/chem/index.htm
@@ -754,98 +754,98 @@ function setHomepagea1067869a()
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1176.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="研究生学术研讨会" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">研究生学术研讨会</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1177.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="研究生培养单位年会" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">研究生培养单位年会</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1179.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="研发中心" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">研发中心</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1186.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="烟台大学毕毅教授" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">烟台大学毕毅教授</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1185.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="学位研究生培养示范基地" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">学位研究生培养示范基地</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1180.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="双师型导师风采" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">双师型导师风采</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1184.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="双师型导师风采" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">双师型导师风采</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1181.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="高等教育博览会报告" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">高等教育博览会报告</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1183.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="车间生产" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">车间生产</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1182.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="产教融合高峰论坛" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">产教融合高峰论坛</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1178.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="参观东方海洋" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">参观东方海洋</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1187.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="精品课程" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">精品课程</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1188.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="双师型导师风采" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">双师型导师风采</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
                 <td width="300" valign="top" align="center" style="padding-left:2px;padding-right:3px">
                     <div style="Padding: 0px; width: 300px"><table cellpadding="3" cellspacing="0" bgcolor="#f5f5f5" style="border:1px solid #e3e3e3;"><tr><td width="300" height="170" valign="middle" align="center"><div style="overflow:hidden;height:170px;width:300px"><a href="info/1111/1189.htm" target="_blank"><img border="0" name="u_u11_img" src="../system/resource/images/loading.gif" alt="烟台大学毕毅教授" hspace="0" vspace="0"></a></div></td></tr></table></div>
 
-                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom">烟台大学毕毅教授</div>
+                <div class="titlestyle1075314" style="text-align:center;vertical-align:bottom"></div>
 
                 </td>
 
@@ -1047,6 +1047,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
