--- a/website/top/ytu/chem/index.htm
+++ b/website/top/ytu/chem/index.htm
@@ -275,6 +275,9 @@ function setHomepagea1067862a()
                                     <a href="sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
 
+                                <li>
+                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>
 
                                 <li>
                                     <a href="sbs/zywcrqk.htm">主要完成人情况</a>
@@ -339,7 +342,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -565,7 +568,9 @@ function setHomepagea1067869a()
                                 <a href="sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
 
-
+                            <li>
+                                <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                            </li>
                             <li>
                                 <a href="sbs/zywcrqk.htm">主要完成人情况</a>
                             </li>
@@ -627,7 +632,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -1047,6 +1052,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
