--- a/website/top/ytu/chem/cgjj.htm
+++ b/website/top/ytu/chem/cgjj.htm
@@ -205,7 +205,9 @@ function setHomepagea1067862a()
                                     <a href="sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
   
-
+                                <li>
+                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>
                                 <li>
                                     <a href="sbs/zywcrqk.htm">主要完成人情况</a>
                                 </li>
@@ -270,7 +272,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -498,7 +500,9 @@ function setHomepagea1067869a()
                                 <a href="sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
                          
-
+                                <li>
+                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>
                             <li>
                                 <a href="sbs/zywcrqk.htm">主要完成人情况</a>
                             </li>
@@ -560,7 +564,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -721,6 +725,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
