--- a/website/top/ytu/chem/ssjgy.htm
+++ b/website/top/ytu/chem/ssjgy.htm
@@ -206,7 +206,9 @@ function setHomepagea1067862a()
                                     <a href="sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
 
-
+                                <li>
+                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>
                                 <li>
                                     <a href="sbs/zywcrqk.htm">主要完成人情况</a>
                                 </li>
@@ -270,7 +272,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -497,7 +499,9 @@ function setHomepagea1067869a()
                                 <a href="sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
 
-
+                                <li>
+                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>
                             <li>
                                 <a href="sbs/zywcrqk.htm">主要完成人情况</a>
                             </li>
@@ -559,7 +563,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -803,6 +807,7 @@ function setHomepagea1067869a()
 
 </body>
 </html>
+
 
 
 
