--- a/website/top/ytu/chem/sbs/cgchjlqk.htm
+++ b/website/top/ytu/chem/sbs/cgchjlqk.htm
@@ -205,7 +205,9 @@ function setHomepagea1067862a()
                                     <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
   
-
+                                <li>
+                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>
                                 <li>
                                     <a href="zywcrqk.htm">主要完成人情况</a>
                                 </li>
@@ -269,7 +271,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -495,7 +497,9 @@ function setHomepagea1067869a()
                             <li>
                                 <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
-                         
+                                <li>
+                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>                         
 
                             <li>
                                 <a href="zywcrqk.htm">主要完成人情况</a>
@@ -558,7 +562,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -667,6 +671,9 @@ function setHomepagea1067869a()
                             <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                         </li>
    <li>
+                            <a href="cgdtgyyxg.htm">数字化应用情况</a>
+                        </li>
+   <li>
                             <a href="zywcrqk.htm">主要完成人情况</a>
                         </li>
    <li>
@@ -757,6 +764,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
