--- a/website/top/ytu/chem/sbs/cgdcxd.htm
+++ b/website/top/ytu/chem/sbs/cgdcxd.htm
@@ -205,7 +205,9 @@ function setHomepagea1067862a()
                                     <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
   
-
+                                <li>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
+                                </li>
                                 <li>
                                     <a href="zywcrqk.htm">主要完成人情况</a>
                                 </li>
@@ -268,7 +270,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -495,7 +497,9 @@ function setHomepagea1067869a()
                                 <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
                          
-
+                                <li>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
+                                </li>
                             <li>
                                 <a href="zywcrqk.htm">主要完成人情况</a>
                             </li>
@@ -556,7 +560,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -659,6 +663,9 @@ function setHomepagea1067869a()
                             <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                         </li>
    <li>
+                            <a href="szhyyqk.htm">数字化应用情况</a>
+                        </li>
+   <li>
                             <a href="zywcrqk.htm">主要完成人情况</a>
                         </li>
    <li>
@@ -747,6 +754,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
