--- a/website/top/ytu/chem/sbs/cgchjlqk.htm
+++ b/website/top/ytu/chem/sbs/cgchjlqk.htm
@@ -206,7 +206,7 @@ function setHomepagea1067862a()
                                 </li>
   
                                 <li>
-                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
                                 </li>
                                 <li>
                                     <a href="zywcrqk.htm">主要完成人情况</a>
@@ -498,7 +498,7 @@ function setHomepagea1067869a()
                                 <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
                                 <li>
-                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
                                 </li>                         
 
                             <li>
@@ -671,7 +671,7 @@ function setHomepagea1067869a()
                             <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                         </li>
    <li>
-                            <a href="cgdtgyyxg.htm">数字化应用情况</a>
+                            <a href="szhyyqk.htm">数字化应用情况</a>
                         </li>
    <li>
                             <a href="zywcrqk.htm">主要完成人情况</a>
@@ -764,6 +764,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
