--- a/website/top/ytu/chem/cgbg/cgfzlc.htm
+++ b/website/top/ytu/chem/cgbg/cgfzlc.htm
@@ -207,7 +207,7 @@ function setHomepagea1067862a()
                                 </li>
   
                                 <li>
-                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                    <a href="../sbs/szhyyqk.htm">数字化应用情况</a>
                                 </li>
                                 <li>
                                     <a href="../sbs/zywcrqk.htm">主要完成人情况</a>
@@ -500,7 +500,7 @@ function setHomepagea1067869a()
                             </li>
                          
                                 <li>
-                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                    <a href="../sbs/szhyyqk.htm">数字化应用情况</a>
                                 </li>
                             <li>
                                 <a href="../sbs/zywcrqk.htm">主要完成人情况</a>
@@ -740,6 +740,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
