--- a/website/top/ytu/chem/cgbg/cgyjbj.htm
+++ b/website/top/ytu/chem/cgbg/cgyjbj.htm
@@ -206,7 +206,7 @@ function setHomepagea1067862a()
                                 </li>
   
                                 <li>
-                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                    <a href="../sbs/szhyyqk.htm">数字化应用情况</a>
                                 </li>
                                 <li>
                                     <a href="../sbs/zywcrqk.htm">主要完成人情况</a>
@@ -502,7 +502,7 @@ function setHomepagea1067869a()
                             </li>
                          
                                 <li>
-                                    <a href="sbs/szhyyqk.htm">数字化应用情况</a>
+                                    <a href="../sbs/szhyyqk.htm">数字化应用情况</a>
                                 </li>
                             <li>
                                 <a href="../sbs/zywcrqk.htm">主要完成人情况</a>
@@ -754,6 +754,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
