--- a/website/top/ytu/chem/sbs/cgjjjxwtdff.htm
+++ b/website/top/ytu/chem/sbs/cgjjjxwtdff.htm
@@ -207,7 +207,9 @@ function setHomepagea1067862a()
                                 <li>
                                     <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
-  
+                                <li>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
+                                </li>  
 
                                 <li>
                                     <a href="zywcrqk.htm">主要完成人情况</a>
@@ -274,7 +276,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -504,7 +506,9 @@ function setHomepagea1067869a()
                                 <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
                          
-
+                                <li>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
+                                </li>
                             <li>
                                 <a href="zywcrqk.htm">主要完成人情况</a>
                             </li>
@@ -566,7 +570,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -672,6 +676,9 @@ function setHomepagea1067869a()
                             <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                         </li>
    <li>
+                            <a href="szhyyqk.htm">数字化应用情况</a>
+                        </li>
+   <li>
                             <a href="zywcrqk.htm">主要完成人情况</a>
                         </li>
    <li>
@@ -761,6 +768,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
