--- a/website/top/ytu/chem/sbs/cgjjjzyjjdjxwt.htm
+++ b/website/top/ytu/chem/sbs/cgjjjzyjjdjxwt.htm
@@ -204,7 +204,9 @@ function setHomepagea1067862a()
                                 <li>
                                     <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
-  
+                                 <li>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
+                                </li> 
 
                                 <li>
                                     <a href="zywcrqk.htm">主要完成人情况</a>
@@ -271,7 +273,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -500,7 +502,9 @@ function setHomepagea1067869a()
                                 <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
                          
-
+                                <li>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
+                                </li>
                             <li>
                                 <a href="zywcrqk.htm">主要完成人情况</a>
                             </li>
@@ -562,7 +566,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -671,6 +675,9 @@ function setHomepagea1067869a()
                             <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                         </li>
    <li>
+                            <a href="szhyyqk.htm">数字化应用情况</a>
+                        </li>
+   <li>
                             <a href="zywcrqk.htm">主要完成人情况</a>
                         </li>
    <li>
@@ -760,6 +767,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
