--- a/website/top/ytu/chem/sbs/zywcdwqk.htm
+++ b/website/top/ytu/chem/sbs/zywcdwqk.htm
@@ -205,7 +205,9 @@ function setHomepagea1067862a()
                                     <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
   
-
+                                <li>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
+                                </li>
                                 <li>
                                     <a href="zywcrqk.htm">主要完成人情况</a>
                                 </li>
@@ -271,7 +273,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -498,7 +500,9 @@ function setHomepagea1067869a()
                                 <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
                          
-
+                                <li>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
+                                </li>
                             <li>
                                 <a href="zywcrqk.htm">主要完成人情况</a>
                             </li>
@@ -560,7 +564,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -663,6 +667,9 @@ function setHomepagea1067869a()
                             <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                         </li>
    <li>
+                            <a href="szhyyqk.htm">数字化应用情况</a>
+                        </li>
+   <li>
                             <a href="zywcrqk.htm">主要完成人情况</a>
                         </li>
    <li class="active on">
@@ -751,6 +758,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
