--- a/website/top/ytu/chem/sbs/zywcrqk.htm
+++ b/website/top/ytu/chem/sbs/zywcrqk.htm
@@ -206,7 +206,9 @@ function setHomepagea1067862a()
                                     <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
   
-
+                                <li>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
+                                </li>
                                 <li>
                                     <a href="zywcrqk.htm">主要完成人情况</a>
                                 </li>
@@ -272,7 +274,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -500,7 +502,9 @@ function setHomepagea1067869a()
                                 <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
                          
-
+                                <li>
+                                    <a href="szhyyqk.htm">数字化应用情况</a>
+                                </li>
                             <li>
                                 <a href="zywcrqk.htm">主要完成人情况</a>
                             </li>
@@ -562,7 +566,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -664,6 +668,9 @@ function setHomepagea1067869a()
    <li>
                             <a href="cgdtgyyxg.htm">成果的推广应用效果</a>
                         </li>
+   <li>
+                            <a href="szhyyqk.htm">数字化应用情况</a>
+                        </li>
    <li class="active on">
                             <a href="zywcrqk.htm">主要完成人情况</a>
                         </li>
@@ -754,6 +761,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
