--- a/website/top/ytu/chem/zccl1/cgsfytg.htm
+++ b/website/top/ytu/chem/zccl1/cgsfytg.htm
@@ -204,7 +204,9 @@ function setHomepagea1067862a()
                                 <li>
                                     <a href="../sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
-  
+                                <li>
+                                    <a href="../sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>  
 
                                 <li>
                                     <a href="../sbs/zywcrqk.htm">主要完成人情况</a>
@@ -269,7 +271,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="cgsfytg.htm">成果推广与应用</a>
+                                    <a href="cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -496,7 +498,9 @@ function setHomepagea1067869a()
                                 <a href="../sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
                          
-
+                                <li>
+                                    <a href="../sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>
                             <li>
                                 <a href="../sbs/zywcrqk.htm">主要完成人情况</a>
                             </li>
@@ -558,7 +562,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="cgsfytg.htm">成果推广与应用</a>
+                                    <a href="cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -637,7 +641,7 @@ function setHomepagea1067869a()
               <span>-></span>
                 <a href="../zccl1.htm">支撑材料</a>
               <span>-></span>
-                <a href="cgsfytg.htm">成果推广与应用</a>
+                <a href="cgsfytg.htm">成果推广</a>
 </div>
                 </div>
                 <div class="channl-menu leftNav">
@@ -657,7 +661,7 @@ function setHomepagea1067869a()
                         </li>
 
    <li class="active on">
-                            <a href="cgsfytg.htm">成果推广与应用</a>
+                            <a href="cgsfytg.htm">成果推广</a>
                         </li>
    <li>
                             <a href="bksfblwjhj.htm">学生代表性成果</a>
@@ -743,6 +747,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
