--- a/website/top/ytu/chem/zccl1/bksfblwjhj.htm
+++ b/website/top/ytu/chem/zccl1/bksfblwjhj.htm
@@ -205,7 +205,9 @@ function setHomepagea1067862a()
                                     <a href="../sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
   
-
+                                <li>
+                                    <a href="../sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>
                                 <li>
                                     <a href="../sbs/zywcrqk.htm">主要完成人情况</a>
                                 </li>
@@ -269,7 +271,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="cgsfytg.htm">成果推广与应用</a>
+                                    <a href="cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -496,7 +498,9 @@ function setHomepagea1067869a()
                                 <a href="../sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
                          
-
+                                <li>
+                                    <a href="../sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>
                             <li>
                                 <a href="../sbs/zywcrqk.htm">主要完成人情况</a>
                             </li>
@@ -558,7 +562,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="cgsfytg.htm">成果推广与应用</a>
+                                    <a href="cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -653,7 +657,7 @@ function setHomepagea1067869a()
                         </li>
 
    <li>
-                            <a href="cgsfytg.htm">成果推广与应用</a>
+                            <a href="cgsfytg.htm">成果推广</a>
                         </li>
    <li class="active on">
                             <a href="bksfblwjhj.htm">学生代表性成果</a>
@@ -739,6 +743,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
