--- a/website/top/ytu/chem/zccl1/cgsfytg.htm
+++ b/website/top/ytu/chem/zccl1/cgsfytg.htm
@@ -675,7 +675,7 @@ function setHomepagea1067869a()
 
 
 
-成果推广与应用</h3>
+成果推广</h3>
                         </div>
                     </div>
                     <div class="art-main">
@@ -687,7 +687,7 @@ function setHomepagea1067869a()
 
 <script>_addDynClicks('wbnews',1874774002,1118)</script>
 <div class="art-tit cont-tit">
-                            <h3>成果推广与应用</h3>
+                            <h3>成果推广</h3>
                         </div>
                         <div class="art-body">
     <div id="vsb_content_1118_u131"><div id="vsb_content"><p style="text-indent: 0">
@@ -747,6 +747,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
