--- a/website/top/ytu/chem/zywcr/gyp.htm
+++ b/website/top/ytu/chem/zywcr/gyp.htm
@@ -205,7 +205,9 @@ function setHomepagea1067862a()
                                     <a href="../sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                                 </li>
 
-
+                                <li>
+                                    <a href="../sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>
                                 <li>
                                     <a href="../sbs/zywcrqk.htm">主要完成人情况</a>
                                 </li>
@@ -269,7 +271,7 @@ function setHomepagea1067862a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -499,7 +501,9 @@ function setHomepagea1067869a()
                                 <a href="../sbs/cgdtgyyxg.htm">成果的推广应用效果</a>
                             </li>
 
-
+                                <li>
+                                    <a href="../sbs/szhyyqk.htm">数字化应用情况</a>
+                                </li>
                             <li>
                                 <a href="../sbs/zywcrqk.htm">主要完成人情况</a>
                             </li>
@@ -561,7 +565,7 @@ function setHomepagea1067869a()
                                 </li>
 
                                 <li>
-                                    <a href="../zccl1/cgsfytg.htm">成果推广与应用</a>
+                                    <a href="../zccl1/cgsfytg.htm">成果推广</a>
                                 </li>
 
                                 <li>
@@ -746,6 +750,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
